# PythonForDatascience

./: .gitignore
python_0-start/ex00/: Hello.py
python_0-start/ex01/: format_ft_time.py
python_0-start/ex02/: find_ft_type.py
python_0-start/ex03/: NULL_not_found.py
python_0-start/ex04/: whatis.py
python_0-start/ex05/: building.py
python_0-start/ex06/: filterstring.py  ft_filter.py
python_0-start/ex07/: sos.py
python_0-start/ex08/: Loading.py
python_0-start/ex09/: README.md  pyproject.toml
python_0-start/ex09/src/ft_package/: __init__.py  count_list.py
python_1-array/ex00/: give_bmi.py  tester.py
python_1-array/ex01/: array2D.py  tester.py
python_1-array/ex02/: tester.py
python_1-array/ex03/: load_image.py  zoom.py
python_1-array/ex04/: load_image.py  rotate.py
python_1-array/ex05/: load_image.py  pimp_image.py  tester.py
python_2-datatable/ex00/: load_csv.py  tester.py
python_2-datatable/ex01/: aff_life.py
python_2-datatable/ex02/: aff_pop.py
